--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,9 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Run pylint
+      uses: cclauss/GitHub-Action-for-pylint@0.7.0
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
